CSS: fix vertical alignment Date component value; Select component: fix missing space before style & prevent label wrap.

--- a/src/components/Shared/Date/date.module.scss
+++ b/src/components/Shared/Date/date.module.scss
@@ -9,7 +9,7 @@
 .dateComponent {
 	& label {
 		font-size: $label-font-size;
-		margin-right: 0.3rem;
+		margin-right: 0.5rem;
 	}
 
 	& select[type="date"] {
